--- a/mypage.html
+++ b/mypage.html
@@ -3,7 +3,7 @@
 <head>
 	<title> This is my first page. </title>
 </head>
-<body style="background-color: #0d0d9e;">
+<body style="background-color: #D8BFD8">
 
 	<header>
 	<p style="font-size: 200%; color:#19ffff; border: 2px solid Black;">Welcome User!</p>
