--- a/basic_tags_in_HTML.html
+++ b/basic_tags_in_HTML.html
@@ -16,7 +16,7 @@
 	<h3>Use of br tag</h3>
 	<p>This paragraph is used to demostrate <br> above tag.</p>
 	<h3>Use of b(bold) tag</h3>
-	<p><b>This text is bold</b></p>
+	<p><b>This text is bold.</b></p>
 	<h3>Use of i(italic) tag</h3>
 	<p><i>This text is italic</i></p>
 	<h3>Use of sub(subscript) and sup(superscript) tags</h3>
