--- a/basic_tags_in_HTML.html
+++ b/basic_tags_in_HTML.html
@@ -18,7 +18,7 @@
 	<h3>Use of b(bold) tag</h3>
 	<p><b>This text is bold.</b></p>
 	<h3>Use of i(italic) tag</h3>
-	<p><i>This text is italic</i></p>
+	<p><i>This text is italic.</i></p>
 	<h3>Use of sub(subscript) and sup(superscript) tags</h3>
 	<p>This is<sub> subscript</sub> and <sup>superscript</sup></p><hr>
 	<h3>Use of align tag</h3>
